fixed width inconsistency on dark mode /about page

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -83,7 +83,7 @@
 
 .dark-mode .about-card .dark-border {
     background: rgb(31 41 55);
-    width: 100%;
+    width: auto;
     border-radius: 10px;
     padding: 1rem;
 }
